// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Related publications Component  should not render data with empty lookups 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-"
      id="standard-card-"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card--header"
            id="standard-card--header"
          />
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card--content"
        data-testid="standard-card--content"
        id="standard-card--content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-has-related-datasets-0"
            >
              <a
                href="/view/UQ:313292"
              >
                Toxicity characterization of urban stormwater with bioanalytical tools
              </a>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-has-related-datasets-1"
            >
              <a
                href="/view/UQ:313292"
              >
                dataset 2
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related publications Component  should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-title"
      id="standard-card-title"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-title-header"
            id="standard-card-title-header"
          >
            Title
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-title-content"
        data-testid="standard-card-title-content"
        id="standard-card-title-content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-has-related-datasets-0"
            >
              <a
                href="/view/UQ:313292"
              >
                Toxicity characterization of urban stormwater with bioanalytical tools
              </a>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-has-related-datasets-1"
            >
              <a
                href="/view/UQ:313292"
              >
                dataset 2
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related publications Component  should render with a publication title 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-a-test-title"
      id="standard-card-a-test-title"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-a-test-title-header"
            id="standard-card-a-test-title-header"
          >
            A test Title
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-a-test-title-content"
        data-testid="standard-card-a-test-title-content"
        id="standard-card-a-test-title-content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="undefined-current"
            >
              Data collection mock testing record
              <b>
                 (Current Record)
              </b>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-has-related-datasets-0"
            >
              <a
                href="/view/UQ:313292"
              >
                Toxicity characterization of urban stormwater with bioanalytical tools
              </a>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-has-related-datasets-1"
            >
              <a
                href="/view/UQ:313292"
              >
                dataset 2
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related publications Component  should render without a child search key 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-title"
      id="standard-card-title"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-title-header"
            id="standard-card-title-header"
          >
            Title
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-title-content"
        data-testid="standard-card-title-content"
        id="standard-card-title-content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-has-related-datasets-0"
            >
              <a
                href="/view/UQ:313292"
              >
                Toxicity characterization of urban stormwater with bioanalytical tools
              </a>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-has-related-datasets-1"
            >
              <a
                href="/view/UQ:313292"
              >
                dataset 2
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related publications Component  should render without a parent search key 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-title"
      id="standard-card-title"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-title-header"
            id="standard-card-title-header"
          >
            Title
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-title-content"
        data-testid="standard-card-title-content"
        id="standard-card-title-content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              data-testid="rek-isderivationof-0"
            >
              <a
                href="/view/UQ:390658"
              >
                Landscape of somatic mutations in 560 breast cancer whole-genome sequences
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
